# tripclaim-pilot

./: .gitignore  EXECUTION_PLAN.md  README.md  plan.md  pyproject.toml  reimbursement_flow_extracted.txt  spec.md  更新报告.md
.trae/specs/build-trip-claim-auto-approval/: checklist.md  spec.md  tasks.md
config/: rules_config.json
data/: tripclaim.db
output/: result.json  result.md
src/tripclaim/: api.py  audit_log.py  classifier.py  engine.py  main.py  models.py  parsers.py  rules.py  storage.py  ui.py  verification.py
src/tripclaim/web/: index.html  main.js  styles.css
src/tripclaim_auto_approval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
报销材料/: 3.现金支出情况说明书（非公务卡支付时填写）(1).docx  4.支付记录.docx  5.特殊事项审批表（有非常规情况时填写）(1).docx  6.电子行程单.docx  7.经济舱字样截图.docx
